<resources>
    <string name="app_name">Organizapp!</string>
    <string name="title_activity_categorias">Categorias</string>
    <string name="nombreEventoHint">Nombre de evento</string>
    <string name="agregarCategoriaBoton">Agregar categoria</string>
    <string name="agregarEventoText">Agregar evento</string>
    <string name="atrasBoton">Atras</string>
    <string name="agregarEventoCalendarioBoton">+</string>
    <string name="fecha_hora_seleccionada">Fecha/hora seleccionada:</string>
    <string name="descripion_del_evento">Descripion del evento</string>
    <string name="introdusca_una_categoria">Introdusca una categoria</string>
    <string name="botonAgregar">Agregar</string>
    <string name="ingrese_categoria">Ingrese categoria</string>
    <string name="categorias">Categorias</string>
</resources>
