<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Boton atras -->
    <!--
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atrasBoton"
        android:id="@+id/botonAtras"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="atrasView"/>-->


    <!-- Boton para agregar evento -->
    <!-- Todavia no hace nada -->
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregarEventoText"
        android:id="@+id/botonAgregar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>



    <!-- Nombre de evento -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:id="@+id/crearNombreEvento"
        android:hint="@string/nombreEventoHint" />


    <!-- Comentar que es esto -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/crearNombreEvento"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint=""/>

    <Spinner
        android:id="@+id/crearSpinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_below="@id/editText" />

    <!-- Boton agregar categoria -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregarCategoriaBoton"
        android:id="@+id/botonCategoria"
        android:layout_alignBottom="@+id/crearSpinner1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/editText"
        android:layout_toRightOf="@id/crearSpinner1"
        android:layout_toEndOf="@id/crearSpinner1"
        android:onClick="botonAgregarCategoria"/>

    <!-- Muestra la fecha seleccionada -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_hora_seleccionada"
        android:layout_below="@id/crearSpinner1"
        android:textSize="20sp"
        android:id="@+id/crearNotificacionFecha"/>

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@id/crearNotificacionFecha"
        android:id="@+id/reloj" />

    <!-- Descripcion de evento -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crearDescripcionEvento"
        android:layout_below="@id/crearNotificacionFecha"
        android:hint="@string/descripion_del_evento" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/crearDatePicker"/>

</RelativeLayout>